# chat.dataweek.de

./: .gitignore  Containerfile  README.md  Taskfile.yml  chat.dist.env  compose.yaml  pyproject.toml
chat/: broker.py  fastbot.py
static/: chat.html  chat.js
